--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,3 @@
-<<<<<<< HEAD
-# dependencies
-node_modules
-
-# logs
-npm-debug.log
-
-# Nuxt build
-.nuxt
-
-# Nuxt generate
-dist
-=======
 # Logs
 logs
 *.log
@@ -72,4 +59,6 @@ typings/
 
 # next.js build output
 .next
->>>>>>> 3d9ac9b87a1677004c61c624b5b76246b40e1798
+
+#package-lock
+package-lock.json
