--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "new blog",
   "author": "molyCHN",
   "private": true,
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": "8080"
+    }
+  },
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
+    "dev": "NODE_ENV=development nuxt",
+    "build": "NODE_ENV=production nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
@@ -17,12 +23,17 @@
     "nuxt": "^1.0.0"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-eslint": "^8.2.1",
     "babel-plugin-component": "^1.1.1",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
+    "highlight.js": "^9.12.0",
+    "mark.js": "^8.11.1",
+    "marked": "^0.5.0",
+    "mavon-editor": "^2.6.17",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.1.0"
   }
